fridainstall ok
